Prevent line wrap after screen become smaller

--- a/matrix6.css
+++ b/matrix6.css
@@ -12,6 +12,11 @@ body {
 }
 
 
+#screen {
+    white-space: nowrap;
+}
+
+
 #sample {
     position: fixed;
     color: transparent;
